--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "theadaptivetraveler",
+  "name": "WebResume",
   "version": "1.0.0",
-  "description": "Culture Travel App",
+  "description": "Eric Willard Online Resume",
   "main": "server.js",
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
@@ -37,7 +37,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ewill20/TheAdaptiveTraveler.git"
+    "url": "git+https://github.com/ewill20/WebResume.git"
   },
   "keywords": [
     "Cultural",
@@ -46,7 +46,7 @@
   "author": "Eric Willard",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/ewill20/TheAdaptiveTraveler/issues"
+    "url": "https://github.com/ewill20/WebResume/issues"
   },
-  "homepage": "https://github.com/ewill20/TheAdaptiveTraveler#readme"
+  "homepage": "https://github.com/ewill20/WebResume#readme"
 }
