--- a/package.json
+++ b/package.json
@@ -1,38 +1,46 @@
 {
-  "name": "theadaptivetraveler",
+  "name": "Portfolio",
   "version": "1.0.0",
-  "description": "Culture Travel App",
+  "description": "Personal Portfolio",
   "main": "server.js",
   "dependencies": {
+    "ajax": "0.0.4",
+    "balanced-match": "^1.0.0",
     "bcrypt-nodejs": "0.0.3",
-    "bluebird": "^3.5.5",
-    "body-parser": "^1.18.2",
-    "chai": "^4.1.2",
+    "body-parser": "^1.19.0",
+    "chai": "^4.2.0",
+    "connect-session-sequelize": "^6.0.0",
     "console.table": "^0.9.1",
+    "custom-env": "^1.0.2",
     "dotenv": "^4.0.0",
     "env": "0.0.2",
     "express": "^4.17.1",
-    "express-handlebars": "^3.0.0",
-    "express-session": "^1.15.6",
+    "express-handlebars": "^3.1.0",
+    "express-session": "^1.16.2",
     "favicon": "0.0.2",
     "fs": "0.0.1-security",
-    "inquirer": "^4.0.0",
+    "handlebars": "^4.1.2",
+    "inquirer": "^4.0.2",
+    "jquery": "^3.4.1",
     "json": "^9.0.6",
     "local": "^0.3.3",
-    "mocha": "^4.0.1",
-    "mysql": "github:mysqljs/mysql",
-    "mysql2": "^1.5.1",
+    "mocha": "^4.1.0",
+    "mysql": "^2.17.1",
+    "mysql2": "^1.6.5",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "passport-local-sequelize": "^0.9.0",
     "path": "^0.12.7",
+    "pg": "^7.12.0",
+    "pg-hstore": "^2.3.3",
     "sequelize": "^6.0.0",
+    "sequelize-cli": "^5.5.0",
     "sequelize-heroku": "^2.1.3",
     "strategy": "^1.1.1",
-    "yarn": "^1.3.2"
+    "yarn": "^1.17.3"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-free": "^5.10.1"
+    "@fontawesome/fontawesome-free": "ˆ5.10.1"
   },
   "scripts": {
     "test": "\"test\"",
@@ -40,16 +48,16 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ewill20/TheAdaptiveTraveler.git"
+    "url": "git+https://github.com/ewill20/Porfolio.git"
   },
   "keywords": [
-    "Cultural",
-    "Traveler"
+    "Eric Willard",
+    "Portfolio"
   ],
   "author": "Eric Willard",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/ewill20/TheAdaptiveTraveler/issues"
+    "url": "https://github.com/ewill20/Portfolio/issues"
   },
-  "homepage": "https://github.com/ewill20/TheAdaptiveTraveler#readme"
+  "homepage": "https://github.com/ewill20/Portfolio"
 }
